apps/production/openwebui/ingressConfig.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ai.vandelocht.uk`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
          serversTransport: openwebui-transport
      middlewares:
        - name: svc-openwebui-headers
        - name: openwebui-compress
  tls:
    secretName: ai-vandelocht-uk-production-tls
    options:
      name: openwebui-tls-options
      namespace: openwebui
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-openwebui-headers
  namespace: openwebui
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: openwebui-compress
  namespace: openwebui
spec:
  compress: {} # Enables default compression (e.g., gzip)
